# Mini-Pokoj-Inwestora

./: Cargo.toml  README.md
api/: Cargo.toml  DATA.json
api/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/assets/Stocks/: DataTable.jsx  columns.jsx
