[package]
name = "Mini-Pokoj-Inwestora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
future-utils = "0.12.1"
futures-util = "0.3.31"
tokio = {version = "1.43.0", features = ["full"]}
