[package]
name = "Mini-Pokoj-Inwestora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.9.0"
chrono = "0.4.39"
futures-util = "0.3.31"
reqwest = {version = "0.12.12", features = ["json"]}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
time = "0.3.37"
tokio = {version = "1.43.0", features = ["full"]}
